  [Marco Pagani]
  * Added a new rupture-site metric: the azimuth to the closest point on the
    rupture

  [Michele Simionato]
  * The site amplification has been disabled by default in the ShakeMap
    calculator, since it is usually already taken into account by the USGS

  [Daniele Viganò]
  * Deleted calculations are not removed from the database anymore
  * Removed the 'oq dbserver restart' command since it was broken

  [Richard Styron]
  * Fixed `YoungsCoppersmith1985MFD.from_total_moment_rate()`: due to numeric
    errors it was producing incorrect seismicity rates

  [Michele Simionato]
  * Now we generate the output `disagg_by_src` during disaggregation even in the
    case of multiple realizations
  * Changed the way the random seed is set for BT and PM distributions
  * The filenames generated by disagg_by_src exporter now contains the site ID
    and not longitude and latitude, consistently with the other exporters
  * Accepted again meanLRs greater than 1 in vulnerability functions of kind LN
  * Fixed a bug in event based with correlation and a filtered site collection
  * Fixed the CSV exporter for the realizations in the case of scenarios
    with parametric GSIMs
  * Removed some misleading warnings for calculations with a site model
  * Added a check for missing `risk_investigation_time` in ebrisk
  * Reduced drastically (I measured improvements over 40x) memory occupation,
    data transfer and data storage for multi-sites disaggregation
  * Sites for which the disaggregation PoE cannot be reached are discarded
    and a warning is printed, rather than killing the whole computation
  * `oq show performance` can be called in the middle of a computation again
  * Filtered out the far away distances and reduced the time spent in
    saving the performance info by orders of magnitude in large disaggregations
  * Reduced the data transfer by reading the data directly from the
    datastore in disaggregation calculations