@@ -20,8 +20,7 @@
 Implements SERA site amplification models class: `PitilakisEtAl2018`,
                                                  `Eurocode8Amplification`,
                                                  `Eurocode8AmplificationDefault`,
-                                                 `SandikkayaDinsever2018`,
-                                                 `KothaEtAl2018SERAGeology`
+                                                 `SandikkayaDinsever2018`
 """
 import numpy as np
 from copy import deepcopy
@@ -679,211 +678,3 @@ class SandikkayaDinsever2018(GMPE):
     3.500  -0.0272   0.0461  -0.0630   0.05250  0.14220  -0.0294   0.02160   0.1560
     4.000  -0.0203   0.0503  -0.0641   0.05720  0.19450  -0.0242   0.01380   0.2198
     """)
-
-
-#class KothaEtAl2019SERAGeology(KothaEtAl2019SERA):
-#    """
-#    Adaptation of the Kotha et al. (2019) GMPE for use with slope and geology
-#    in place of inferred/measured Vs30.
-#    """
-#    experimental = True
-#
-#    #: Required site parameter is not set
-#    REQUIRES_SITES_PARAMETERS = set(("slope", "geology"))
-#
-#    #: Geological Units
-#    GEOLOGICAL_UNITS = [b"CENOZOIC", b"HOLOCENE", b"MESOZOIC",
-#                        b"PALEOZOIC", b"PLEISTOCENE", b"PRECAMBRIAN"]
-#
-#    def get_mean_and_stddevs(self, sites, rup, dists, imt, stddev_types):
-#        """
-#        See :meth:`superclass method
-#        <.base.GroundShakingIntensityModel.get_mean_and_stddevs>`
-#        for spec of input and result values.
-#        """
-#        # extracting dictionary of coefficients specific to required
-#        # intensity measure type.
-#
-#        C = self.COEFFS[imt]
-#        C_AMP_FIXED = self.COEFFS_FIXED[imt]
-#        C_AMP_RAND_INT = self.COEFFS_RANDOM_INT[imt]
-#        C_AMP_RAND_GRAD = self.COEFFS_RANDOM_GRAD[imt]
-#
-#        mean = (self.get_magnitude_scaling(C, rup.mag) +
-#                self.get_distance_term(C, rup, dists.rjb, imt) +
-#                self.get_tau_f_adjustment(C) +
-#                self.get_site_amplification(C_AMP_FIXED, C_AMP_RAND_INT,
-#                                            C_AMP_RAND_GRAD, sites))
-#        if imt.name in "PGA SA":
-#            mean -= np.log(100.0 * g)
-#        stddevs = self.get_stddevs(C, C_AMP_FIXED, dists.rjb.shape,
-#                                   stddev_types, sites)
-#        if self.sigma_mu_epsilon:
-#            # Apply the epistemic uncertainty factor (sigma_mu) multiplied by
-#            # the number of standard deviations
-#            sigma_mu = self.get_sigma_mu_adjustment(C, imt, rup, dists)
-#            # Cap sigma_mu at 0.35
-#            sigma_mu[sigma_mu > 0.35] = 0.35
-#            mean += (self.sigma_mu_epsilon * sigma_mu)
-#        return mean, stddevs
-#
-#    def get_site_amplification(self, C_AMP_FIXED, C_AMP_RAND_INT,
-#                               C_AMP_RAND_GRAD, sites):
-#        """
-#        Returns the site amplification term depending on whether the Vs30
-#        is observed of inferred
-#        """
-#        ampl = np.zeros(sites.slope.shape)
-#        geol_units = np.unique(sites.geology)
-#        t_slope = np.copy(sites.slope)
-#        t_slope[t_slope > 0.1] = 0.1
-#        for geol_unit in geol_units:
-#            idx = sites.geology == geol_unit
-#            if geol_unit in self.GEOLOGICAL_UNITS:
-#                v1 = C_AMP_FIXED["V1"] + C_AMP_RAND_INT[geol_unit.decode()]
-#                v2 = C_AMP_FIXED["V2"] + C_AMP_RAND_GRAD[geol_unit.decode()]
-#            else:
-#
-#                v1 = C_AMP_FIXED["V1"]
-#                v2 = C_AMP_FIXED["V2"]
-#            ampl[idx] = v1 + v2 * np.log(t_slope[idx])
-#        return ampl
-#
-#    def get_stddevs(self, C, C_FIXED, stddev_shape, stddev_types, sites):
-#        """
-#        Returns the standard deviations, with different site standard
-#        deviation for inferred vs. observed vs30 sites.
-#        """
-#        stddevs = []
-#        tau = C["tau_event"]
-#        phi = np.sqrt(C["phi0"] ** 2.0 + C_FIXED["phi_s"] ** 2.)
-#        for stddev_type in stddev_types:
-#            assert stddev_type in self.DEFINED_FOR_STANDARD_DEVIATION_TYPES
-#            if stddev_type == const.StdDev.TOTAL:
-#                stddevs.append(np.sqrt(tau ** 2. + phi ** 2.) +
-#                               np.zeros(stddev_shape))
-#            elif stddev_type == const.StdDev.INTRA_EVENT:
-#                stddevs.append(phi + np.zeros(stddev_shape))
-#            elif stddev_type == const.StdDev.INTER_EVENT:
-#                stddevs.append(tau + np.zeros(stddev_shape))
-#        return stddevs
-#
-#    COEFFS_FIXED = CoeffsTable(sa_damping=5, table="""\
-#    imt             V1           V2       phi_s
-#    pga    -0.29594600  -0.09183800  0.57075400
-#    pgv    -0.36804900  -0.11453800  0.46278900
-#    0.010  -0.29209050  -0.09447700  0.57291750
-#    0.025  -0.28921325  -0.09568025  0.57902300
-#    0.040  -0.28462425  -0.09647375  0.59541900
-#    0.050  -0.28295050  -0.09424475  0.61734200
-#    0.070  -0.27990775  -0.08924825  0.64161025
-#    0.100  -0.26363625  -0.08390100  0.65599525
-#    0.150  -0.24501350  -0.08196050  0.64772600
-#    0.200  -0.25077550  -0.08429875  0.62417350
-#    0.250  -0.27834675  -0.08982250  0.59864700
-#    0.300  -0.31026225  -0.09745725  0.57698075
-#    0.350  -0.33999525  -0.10569825  0.56049800
-#    0.400  -0.36725150  -0.11258475  0.55141950
-#    0.450  -0.39050650  -0.11717625  0.54758150
-#    0.500  -0.41391825  -0.12185000  0.54270500
-#    0.600  -0.43917000  -0.12749250  0.53566000
-#    0.700  -0.45449650  -0.13062900  0.52891525
-#    0.750  -0.45800650  -0.13096425  0.52361200
-#    0.800  -0.46407100  -0.13190525  0.52104600
-#    0.900  -0.47601800  -0.13419625  0.52035575
-#    1.000  -0.48178325  -0.13455875  0.51749975
-#    1.200  -0.48527750  -0.13370700  0.51247825
-#    1.400  -0.49458775  -0.13496125  0.50752350
-#    1.600  -0.50175300  -0.13690675  0.50260125
-#    1.800  -0.50352650  -0.13782925  0.49706925
-#    2.000  -0.50485525  -0.13801150  0.48956175
-#    2.500  -0.50580975  -0.13804225  0.48092500
-#    3.000  -0.49708025  -0.13593300  0.47176350
-#    3.500  -0.47517075  -0.13018125  0.46087325
-#    4.000  -0.44889825  -0.12088900  0.45336125
-#    4.500  -0.42341650  -0.10901550  0.44920875
-#    5.000  -0.39536725  -0.09764825  0.44087650
-#    6.000  -0.36658825  -0.08814650  0.42946725
-#    7.000  -0.35351550  -0.08534975  0.42009150
-#    8.000  -0.35384600  -0.08686100  0.41627050
-#    """)
-#
-#    COEFFS_RANDOM_INT = CoeffsTable(sa_damping=5, table="""\
-#    imt      CENOZOIC    HOLOCENE     MESOZOIC    PALEOZOIC  PLEISTOCENE  PRECAMBRIAN
-#    pga    0.00000000  0.00000000   0.00000000   0.00000000   0.00000000   0.00000000
-#    pgv   -0.02637900  0.15503300  -0.13205500  -0.10811500   0.15416300  -0.04264800
-#    0.010 -0.05485900  0.06018600  -0.06592600  -0.00670600   0.04745450   0.01985050
-#    0.025 -0.08811475  0.08763575  -0.09399725  -0.00547450   0.06940900   0.03054175
-#    0.040 -0.13240100  0.11203500  -0.11583375   0.00231150   0.09014075   0.04374750
-#    0.050 -0.11017575  0.08153475  -0.08152775   0.00763450   0.06696350   0.03557075
-#    0.070 -0.03846000  0.02704250  -0.02672825   0.00320150   0.02250450   0.01243975
-#    0.100 -0.03430225  0.02671650  -0.03745875   0.01218800   0.02102525   0.01183150
-#    0.150 -0.09512475  0.08072075  -0.11355975   0.03205725   0.06313950   0.03276750
-#    0.200 -0.11190625  0.10314475  -0.13820275   0.02538550   0.08540600   0.03617300
-#    0.250 -0.08486850  0.10203950  -0.11480175  -0.00777975   0.08397350   0.02143700
-#    0.300 -0.05058700  0.12498550  -0.11518875  -0.04274075   0.08121700   0.00231425
-#    0.350 -0.03410425  0.15222600  -0.12635550  -0.06804325   0.09039250  -0.01411450
-#    0.400 -0.03542500  0.16273825  -0.12304850  -0.08401400   0.11034900  -0.03059875
-#    0.450 -0.04344400  0.17864500  -0.11454275  -0.10350275   0.13765500  -0.05481075
-#    0.500 -0.05767100  0.20439875  -0.10854650  -0.13255575   0.17285700  -0.07848300
-#    0.600 -0.04740950  0.21638100  -0.10838175  -0.15723325   0.19255350  -0.09590975
-#    0.700 -0.00501500  0.21812050  -0.11718200  -0.16939250   0.18670725  -0.11323800
-#    0.750  0.02978525  0.22665325  -0.12979450  -0.17818575   0.18056125  -0.12901950
-#    0.800  0.04054575  0.23552775  -0.13498100  -0.18659825   0.18715200  -0.14164625
-#    0.900  0.04134525  0.23448350  -0.13162225  -0.18668025   0.19404775  -0.15157400
-#    1.000  0.02921750  0.21822875  -0.12182250  -0.17568350   0.20100050  -0.15094100
-#    1.200  0.01327950  0.19488825  -0.10668600  -0.16905475   0.21141850  -0.14384625
-#    1.400  0.01961050  0.17950150  -0.09589150  -0.17229700   0.21216175  -0.14308575
-#    1.600  0.03238425  0.17188925  -0.09245875  -0.17089625   0.20547250  -0.14639075
-#    1.800  0.02548350  0.16657725  -0.08847825  -0.16235625   0.20507475  -0.14630075
-#    2.000  0.00867850  0.15209175  -0.07797150  -0.15142050   0.21022750  -0.14160600
-#    2.500  0.00772100  0.13005225  -0.06929400  -0.14026600   0.20207975  -0.13029375
-#    3.000  0.01645200  0.11508775  -0.06808200  -0.13685650   0.18539975  -0.11200150
-#    3.500  0.01612800  0.10495550  -0.06778625  -0.13673125   0.17817025  -0.09473600
-#    4.000  0.01094075  0.07452950  -0.05107700  -0.09925375   0.13022525  -0.06536450
-#    4.500  0.00411475  0.02468825  -0.01745275  -0.03178775   0.04186600  -0.02142850
-#    5.000  0.00000000  0.00000000   0.00000000   0.00000000   0.00000000   0.00000000
-#    6.000  0.00000000  0.00000000   0.00000000   0.00000000   0.00000000   0.00000000
-#    7.000  0.00973950  0.01325425  -0.02404000  -0.01792800   0.03975650  -0.02078200
-#    8.000  0.01947900  0.02650850  -0.04808000  -0.03585600   0.07951300  -0.04156400
-#    """)
-#
-#    COEFFS_RANDOM_GRAD = CoeffsTable(sa_damping=5, table="""\
-#    imt       CENOZOIC     HOLOCENE     MESOZOIC    PALEOZOIC  PLEISTOCENE  PRECAMBRIAN
-#    pga     0.00491300  -0.01478800   0.02632100   0.00210200  -0.01327800  -0.00527200
-#    pgv    -0.00470900  -0.00033700  -0.00079900  -0.00164800   0.00790300  -0.00041000
-#    0.010  -0.00597800   0.00200700   0.00281500  -0.00006700   0.00074950   0.00047300
-#    0.025  -0.01326100   0.01064200  -0.00879000  -0.00033325   0.00803075   0.00371100
-#    0.040  -0.02375950   0.01985600  -0.02046600   0.00054550   0.01599850   0.00782525
-#    0.050  -0.01913050   0.01403050  -0.01112200   0.00068025   0.01023475   0.00530725
-#    0.070  -0.00071150   0.00003975   0.00867650  -0.00200500  -0.00345650  -0.00254250
-#    0.100   0.00244550  -0.00245300   0.00975475  -0.00113725  -0.00482700  -0.00378200
-#    0.150  -0.01114125   0.00739725  -0.00812300   0.00320250   0.00625900   0.00240625
-#    0.200  -0.01619725   0.00791875  -0.00951050   0.00282375   0.01050450   0.00446075
-#    0.250  -0.01256200   0.00132725   0.00113125  -0.00018100   0.00760500   0.00267900
-#    0.300  -0.00581525   0.00084900   0.00131800  -0.00116300   0.00395375   0.00085725
-#    0.350  -0.00307375   0.00250400  -0.00170475  -0.00128000   0.00343625   0.00011775
-#    0.400  -0.00753350   0.00038150   0.00065700  -0.00037900   0.00573825   0.00113475
-#    0.450  -0.01626075  -0.00142300   0.00445925   0.00090125   0.00909050   0.00323250
-#    0.500  -0.02618350  -0.00164575   0.00726300   0.00098675   0.01359325   0.00598650
-#    0.600  -0.02596850  -0.00441200   0.00875025   0.00185275   0.01185200   0.00792525
-#    0.700  -0.01442475  -0.00730150   0.00771975   0.00416300   0.00277700   0.00706650
-#    0.750  -0.00414850  -0.00690575   0.00492675   0.00502275  -0.00351975   0.00462500
-#    0.800  -0.00123925  -0.00716450   0.00408100   0.00569225  -0.00572700   0.00435775
-#    0.900  -0.00182325  -0.01031100   0.00579050   0.00818425  -0.00861075   0.00677025
-#    1.000  -0.00647525  -0.01574800   0.00938750   0.01278275  -0.01166000   0.01171300
-#    1.200  -0.01280675  -0.02122750   0.01321675   0.01845900  -0.01493200   0.01729050
-#    1.400  -0.01205300  -0.02349525   0.01427350   0.02211175  -0.02067775   0.01984100
-#    1.600  -0.00822050  -0.02411175   0.01402375   0.02354150  -0.02606725   0.02083475
-#    1.800  -0.01009425  -0.02522300   0.01571100   0.02438225  -0.02728075   0.02250475
-#    2.000  -0.01598500  -0.02859225   0.01894200   0.02646950  -0.02641375   0.02557900
-#    2.500  -0.01650400  -0.03263775   0.02021700   0.02978850  -0.02904200   0.02817800
-#    3.000  -0.01255600  -0.03405875   0.01991325   0.03237800  -0.03261325   0.02693725
-#    3.500  -0.01103075  -0.03474150   0.02036150   0.03301225  -0.03140925   0.02380875
-#    4.000  -0.01450800  -0.04258125   0.02474075   0.04481975  -0.04269500   0.03022425
-#    4.500  -0.02238225  -0.05731850   0.03308050   0.06980050  -0.06842100   0.04524050
-#    5.000  -0.02712000  -0.06411950   0.03766550   0.07964600  -0.07926200   0.05318950
-#    6.000  -0.02758000  -0.06222675   0.03803475   0.07185725  -0.07524225   0.05515675
-#    7.000  -0.02296125  -0.05572500   0.02893225   0.06096075  -0.05998650   0.04877975
-#    8.000  -0.01827300  -0.05041250   0.01969150   0.05483050  -0.04697200   0.04113550
-#    """)
